--- a/config.yaml
+++ b/config.yaml
@@ -79,7 +79,7 @@ train:
 wrappers:
   baseline:
     - stream_wrapper.StreamWrapper:
-        user: thatguy
+        user: kywch
     - decay_exploration.DecayWrapper:
         step_forgetting_factor:
           npc: 0.995
@@ -94,21 +94,24 @@ wrappers:
         forgetting_frequency: 10
 
 rewards:
-  baseline.BaselineRewardEnv:
+  environment.CustomRewardEnv:
     reward:
+      explore_weight: 3.0
+      explore_npc_weight: 1.0
+      explore_hidden_obj_weight: 1.0
 
 policies:
-  multi_convolutional.MultiConvolutionalPolicy:
+  policy.ConvolutionalPolicy:
     policy:
       input_size: 512
       hidden_size: 512
       output_size: 512
       framestack: 3
-      flat_size: 2184
+      flat_size: 1920
 
     recurrent:
       # Assumed to be in the same module as the policy
-      name: RecurrentMultiConvolutionalWrapper
+      name: RecurrentWrapper
       input_size: 512
       hidden_size: 512
       num_layers: 1
