--- a/config.yaml
+++ b/config.yaml
@@ -33,7 +33,7 @@ env:
   state_dir: pyboy_states
   init_state: Bulbasaur
   action_freq: 24
-  max_steps: 100_000_000
+  max_steps: 200_000_000
   save_video: False
   fast_video: False
   frame_stacks: 1
@@ -47,7 +47,7 @@ train:
   compile: True
   compile_mode: "reduce-overhead"
   float32_matmul_precision: "high"
-  total_timesteps: 100_000_000
+  total_timesteps: 200_000_000
   batch_size: 32768
   learning_rate: 2.5e-4
   anneal_lr: True
@@ -116,6 +116,21 @@ policies:
     recurrent:
       # Assumed to be in the same module as the policy
       name: RecurrentWrapper
+      input_size: 512
+      hidden_size: 512
+      num_layers: 1
+
+  policy_multiconv.MultiConvolutionalPolicy:
+    policy:
+      input_size: 512
+      hidden_size: 512
+      output_size: 512
+      framestack: 3  # not used for now
+      flat_size: 2184  # not used for now
+
+    recurrent:
+      # Assumed to be in the same module as the policy
+      name: RecurrentMultiConvolutionalWrapper
       input_size: 512
       hidden_size: 512
       num_layers: 1
