--- a/config.yaml
+++ b/config.yaml
@@ -49,8 +49,8 @@ train:
   float32_matmul_precision: "high"
   total_timesteps: 200_000_000
   batch_size: 131072
-  learning_rate: 2.5e-4
-  anneal_lr: True
+  learning_rate: 2.0e-4
+  anneal_lr: False
   gamma: 0.998
   gae_lambda: 0.95
   num_minibatches: 4
