--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 wandb:
   entity: kywch
-  project: pokemon-nr
+  project: pokemon-rs
   group: ~
 
 debug:
@@ -33,7 +33,7 @@ env:
   state_dir: pyboy_states
   init_state: Bulbasaur
   action_freq: 24
-  max_steps: 200_000_000
+  max_steps: 131072
   save_video: False
   fast_video: False
   frame_stacks: 1
@@ -48,7 +48,7 @@ train:
   compile_mode: "reduce-overhead"
   float32_matmul_precision: "high"
   total_timesteps: 200_000_000
-  batch_size: 131072
+  batch_size: 65536
   learning_rate: 2.0e-4
   anneal_lr: False
   gamma: 0.998
@@ -66,10 +66,10 @@ train:
   bptt_horizon: 16 #8
   vf_clip_coef: 0.12 # 0.1
 
-  num_envs: 150
-  envs_per_worker: 2
-  envs_per_batch: 60
-  env_pool: True
+  num_envs: 32
+  envs_per_worker: 1
+  envs_per_batch: 32
+  env_pool: False
 
   verbose: True
   data_dir: runs
