--- a/config.yaml
+++ b/config.yaml
@@ -84,7 +84,7 @@ wrappers:
   baseline:
     - stream_wrapper.StreamWrapper:
         user: kywch
-    - decay_exploration.DecayWrapper:
+    - exploration.DecayWrapper:
         step_forgetting_factor:
           npc: 0.995
           coords: 0.9995
