--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 wandb:
   entity: kywch
-  project: pokemon-rs
+  project: pokemon-nt
   group: ~
 
 debug:
@@ -51,7 +51,7 @@ train:
   float32_matmul_precision: "high"
   total_timesteps: 200_000_000
   batch_size: 131072
-  learning_rate: 2.0e-4
+  learning_rate: 1.5e-4
   anneal_lr: False
   gamma: 0.998
   gae_lambda: 0.95
@@ -86,8 +86,8 @@ wrappers:
   baseline:
     - stream_wrapper.StreamWrapper:
         user: kywch
-    - exploration.MaxLengthWrapper:
-        capacity: 3000
+    # - exploration.MaxLengthWrapper:
+    #     capacity: 3000
     # - exploration.DecayWrapper:
     #     step_forgetting_factor:
     #       npc: 0.9
