--- a/config.yaml
+++ b/config.yaml
@@ -43,14 +43,14 @@ env:
   reduce_res: True
 
 train:
-  seed: 2  # lucky seed?
+  seed: 1
   torch_deterministic: True
   device: cuda
   compile: True
   compile_mode: "reduce-overhead"
   float32_matmul_precision: "high"
   total_timesteps: 200_000_000
-  batch_size: 131072
+  batch_size: 65536
   learning_rate: 2.0e-4
   anneal_lr: False
   gamma: 0.998
