--- a/config.yaml
+++ b/config.yaml
@@ -101,6 +101,8 @@ rewards:
       weight_map_progress: 3.0
       weight_max_opponent_level: 2.0
       weight_party_size: 2.0
+      weight_level_cap: 60
+      weight_over_level_multiplier: 0.25
       weight_learned_moves_with_item: 3.0
       weight_learned_moves: 0.1
       weight_seen_pokemon: 2.0
